--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,152 @@
 body{
 	font-family: 'Lato', sans-serif;
+	background-color: bisque;
+}
+
+.app{
+	max-width: 1100px;
+	margin: 100px auto;
+	box-sizing: border-box;
+	padding: 50px;
+	background-color: rgb(249, 236, 216);
+	border: 5px solid grey;
+	border-radius: 10px;
+}
+
+.title{
+	font-size: 50px;
+	text-align: center;
+	font-weight: 700;
+}
+
+.search-input{
+	width: 100%;
+	padding: 12px;
+	border-radius: 10px;
+	margin: 30px 0 16px 0;
+	font-size: 20px;
+	font-weight: bold;
+	color: black;
+	box-sizing: border-box;
+}
+
+.counter{
+	font-size: 28px;
+	font-weight: bold;
+	border-bottom: 1px solid black;
+	font-style: italic;
+	display: inline-block;
+	margin: 40px 0 20px 0;
+}
+
+.repos, h3, p{
+	padding: 0;
+	margin: 0;
+}
+
+.repo-link{
+	text-decoration: none;
+	font-size: 40px;
+	font-style: italic;
+	font-weight: bold;
+	border-bottom: 1px solid black;
+	color: red;
+}
+
+.repo-link:hover{
+	color: rgb(88, 1, 1);
+	cursor: pointer;
+}
+
+.repos{
+	display: flex;
+   flex-direction: column;
+   row-gap: 30px;
+}
+
+.repos-wrapper{
+	display: flex;
+	flex-direction: column;
+	row-gap: 40px;
+}
+
+.repo-item{
+	list-style: none;
+	border: 3px solid black;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	row-gap: 12px;
+	border-radius: 10px;
+	background: beige;
+}
+
+.repo-subtitle{
+	padding-bottom: 3px;
+	font-size: 24px;
+}
+
+.repo-author{
+	font-size: 20px;
+	font-style: italic;
+}
+
+.button,
+.button-search{
+	display: block;
+	padding: 8px;
+	width: 25%;
+	border: 1px solid black;
+	border-radius: 10px;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+.button:hover,
+.button-search:hover{
+	background: gray;
+	cursor: pointer;
+	transition: all 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 600px) {	
+	.app{
+		margin: 70px 16px;
+		box-sizing: border-box;
+		padding: 30px;
+	}
+	
+	.title{
+		font-size: 40px;
+	}
+	
+	.counter{
+		font-size: 24px;
+		margin: 30px 0 16px 0;
+	}
+	
+	.repo-link{
+		font-size: 30px;
+	}
+
+	.repos{
+		row-gap: 24px;
+	}
+	
+	.repos-wrapper{
+		row-gap: 30px;
+	}
+	
+	.repo-item{
+		padding: 16px;
+		row-gap: 10px;
+	}
+	
+	.repo-subtitle{
+		font-size: 20px;
+	}
+	
+	.repo-author{
+		font-size: 16px;
+	}
 }
