feat: add validate and optimized code

--- a/src/styles/adaptive.scss
+++ b/src/styles/adaptive.scss
@@ -7,6 +7,10 @@
 	.title{
 		font-size: 40px;
 	}
+
+	.search-error{
+		font-size: 16px;
+	}
 	
 	.counter{
 		font-size: 24px;
@@ -53,6 +57,11 @@
 	.title{
 		font-size: 32px;
 	}
+
+	.search-error{
+		font-size: 14px;
+	}
+	
 	
 	.counter{
 		font-size: 20px;
